--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: contact@judsontucker.com
 description: >- # this means to ignore newlines until "baseurl:"
   Judson Tucker's personal site. Your Roomba is probably stuck near a cliff.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://judsontucker.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://www.judsontucker.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: thejudsontucker
 github_username:  jtucker276
 
